# base

./: .dockerignore  .env.devnet  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.builder  Dockerfile.client  IMPLEMENTATION_SUMMARY.md  Justfile  README.md  TROUBLESHOOTING.md  clippy.toml  deny.toml  docker-compose.yml  justfile  lychee.toml  rustfmt.toml
actions/harness/: Cargo.toml  README.md
actions/harness/src/: action.rs  harness.rs  l2.rs  lib.rs  miner.rs  sequencer.rs  test_rollup_config.rs  verifier.rs
actions/harness/tests/: batch_submission.rs  batcher_blobs.rs  batcher_channels.rs  batcher_sequencer_drift.rs  batcher_stress.rs  batcher_throttling.rs  derivation.rs  finalization.rs  hardfork_activation.rs  l1_mining.rs  operator_fees.rs  sequencer.rs  unsafe_gossip.rs
crates/account-abstraction/: COMPLETE_TEST.md  Cargo.toml  DEV_NODE.md  QUICKSTART.md  README.md  SUMMARY.md  TESTING.md  USEROP_GUIDE.md  deployment-info.json  start_dev_node.sh  test-result.json  test_rpc.sh
crates/account-abstraction/contracts/: AllContracts.sol  CombinedContracts.sol  Deploy.sol  IEntryPoint.sol  Quick.sol  SimpleAccount.sol  SimpleAccountFactory.sol  Test.sol
crates/account-abstraction/examples/: create_userop.rs  submit_bundle.rs
crates/account-abstraction/scripts/: complete_test.sh  demo_eth_getLogs.sh  deploy_contracts.sh  deploy_contracts_forge.sh  deploy_direct.sh  deploy_fixed.sh  deploy_inspect.sh  deploy_precompiled.sh  deploy_simple.sh  deploy_verbose.sh  deploy_with_forge.sh  fix_and_retest.sh  test_full_flow.sh  test_receipt.sh  test_with_logs.sh
crates/account-abstraction/src/: lib.rs  rpc.rs  tips_client.rs
crates/alloy/access-lists/: Cargo.toml  README.md
crates/alloy/bundles/: Cargo.toml  README.md
crates/alloy/consensus/: Cargo.toml  README.md  eip2935_isthmus.hex
crates/alloy/evm/: Cargo.toml  README.md
crates/alloy/flashblocks/: Cargo.toml  README.md
crates/alloy/flz/: Cargo.toml  README.md
crates/cli/: Cargo.toml  README.md
crates/cli/src/: lib.rs  logs.rs  tracing.rs  version.rs
crates/fbal/: Cargo.toml  README.md
crates/fbal/src/: builder.rs  db.rs  inspector.rs  lib.rs  types.rs
crates/fbal/tests/: builder.rs  deployment.rs  harness.rs  transfers.rs
crates/flashblocks/: Cargo.toml  README.md
crates/flashblocks-rpc/: Cargo.toml  README.md  spec.md
crates/flashblocks-rpc/src/: cache.rs  exex.rs  fb_state.rs  flashblocks.rs  lib.rs  metrics.rs  pending.rs  pending_blocks.rs  pubsub.rs  rpc.rs  state.rs  subscription.rs  types.rs  verification.rs  web3.rs
crates/flashblocks-rpc/tests/: README.md  erc20.rs  rpc.rs  state.rs
crates/flashblocks/benches/: pending_state.rs  sender_recovery.rs
crates/flashblocks/src/: blocks.rs  error.rs  lib.rs  metrics.rs  pending_blocks.rs  processor.rs  pubsub.rs  rpc.rs  state.rs  state_builder.rs  subscription.rs  traits.rs  validation.rs
crates/flashblocks/tests/: layering.rs  state.rs
crates/mempool-tracer/: Cargo.toml
crates/mempool-tracer/entity/: Cargo.toml
crates/mempool-tracer/migration/: Cargo.toml
crates/mempool-tracer/src/: args.rs  integration_test.rs  lib.rs  tracer.rs
crates/metering/: Cargo.toml  README.md
crates/metering/src/: lib.rs  meter.rs  rpc.rs
crates/node/: Cargo.toml
crates/node/src/: main.rs
crates/op-succinct/: .dockerignore  .env.example  .env.server.example  .gitignore  .gitmodules  CONTRIBUTING.md  CYCLE_COUNT.md  Cargo.toml  Dockerfile.op_proposer  OP_PROPOSER.md  README.md  RELEASE.md  book.toml  docker-compose-celestia.yml  docker-compose-eigenda.yml  docker-compose.yml  funding.json  justfile  op-network.yaml  rust-toolchain  rust-toolchain.toml  x.json
crates/op-succinct/aggregation-client/: Cargo.toml
crates/op-succinct/bindings/: Cargo.toml  build.rs
crates/op-succinct/book/: SUMMARY.md  architecture.md  book.toml  cost-estimator.md  faq.md  introduction.md  node-setup.md  repository-structure.md  troubleshooting.md
crates/op-succinct/common/: Cargo.toml
crates/op-succinct/contracts/: .env.example  .gitignore  README.md  foundry.toml  opsuccinctl2ooconfig-test.json  opsuccinctl2ooconfig.json  remappings.txt  zkconfig.json  zkl2ooconfig.json
crates/op-succinct/elf/: aggregation-client-elf  aggregation-elf  dummy-range-elf  riscv32im-succinct-zkvm-elf
crates/op-succinct/fault-proof/: Cargo.toml  Dockerfile.challenger  Dockerfile.proposer  Dockerfile.proposer.celestia  Dockerfile.proposer.eigenda  docker-compose-celestia.yml  docker-compose-eigenda.yml  docker-compose.yml  justfile
crates/op-succinct/fault_proof/: Cargo.toml  Dockerfile.proposer
crates/op-succinct/native-host/: Cargo.toml
crates/op-succinct/op-proposer-go/: Makefile  go.mod  go.sum
crates/op-succinct/op-succinct-proposer/: COST_ESTIMATOR.md  Cargo.toml  Dockerfile.op_proposer  Dockerfile.server  Dockerfile.span_batch_server  OP_SUCCINCT_PROPOSER.md  README.md  (+3 more)
crates/privacy/: Cargo.toml
crates/relay/: Cargo.toml  README.md
crates/rpc/: Cargo.toml  README.md
crates/runner/: Cargo.toml  README.md
crates/test-utils/: Cargo.toml  README.md
crates/tracex/: Cargo.toml  README.md
crates/transaction-status/: Cargo.toml  README.md
crates/transaction-tracing/: Cargo.toml  README.md
crates/txpool/: Cargo.toml  PROPAGATION_PIPELINE.md  README.md
devnet/: Cargo.toml  Dockerfile.configs  Dockerfile.setup  README.md  devnet.yaml  docker-compose.yml
devnet/scripts/: generate-genesis.sh  generate-l1-genesis.sh  generate-l2-genesis.sh  setup-l1.sh  setup-l2.sh
devnet/src/: cli.rs  containers.rs  devnet_config.rs  docker.rs  host.rs  images.rs  lib.rs  network.rs  rpc.rs  smoke.rs  urls.rs  utils.rs
devnet/templates/: l2-intent.toml.template
devnet/tests/: accounts.rs  load.rs  smoke.rs  tx_forwarding.rs
etc/witness-diff/: Cargo.toml
system_tests/: Cargo.toml  README.md
system_tests/src/: containers.rs  host.rs  images.rs  lib.rs  network.rs  rpc.rs  smoke.rs  urls.rs
system_tests/tests/: accounts.rs  load.rs  metering_stress.rs  smoke.rs
testing/flashblocks-e2e/: Cargo.toml  README.md
(+4279 files in other folders)
