[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
homepage = "https://github.com/base/base"
repository = "https://github.com/base/base"
exclude = [".github/"]

[workspace]
resolver = "2"
members = [
    "bin/*",
    "crates/client/*",
    "crates/consensus/*",
    "crates/shared/*",
    "crates/builder/*",
    "crates/infra/*",
    "devnet"
]
default-members = ["bin/node", "bin/consensus", "bin/builder"]

[workspace.metadata.cargo-udeps.ignore]
normal = ["rustls-platform-verifier"]

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
# Baseline - enable all default clippy lints
all = { level = "warn", priority = -1 }

# === Performance & Cloning ===
missing-const-for-fn = "warn"
redundant-clone = "warn"
clone-on-ref-ptr = "warn"
unnecessary-to-owned = "warn"
cloned-instead-of-copied = "warn"
flat-map-option = "warn"
implicit-clone = "warn"
or-fun-call = "warn"

# === Code Style ===
use-self = "warn"
option-if-let-else = "warn"
uninlined-format-args = "warn"
manual-string-new = "warn"
single-char-pattern = "warn"
redundant-else = "warn"
match-same-arms = "warn"

# === Safety & Documentation ===
undocumented-unsafe-blocks = "warn"
doc-markdown = "warn"

# === Debugging Artifacts ===
dbg-macro = "warn"

# === Code Quality ===
branches-sharing-code = "warn"
derive-partial-eq-without-eq = "warn"
explicit-into-iter-loop = "warn"
explicit-iter-loop = "warn"
iter-with-drain = "warn"
needless-pass-by-ref-mut = "warn"
string-lit-as-bytes = "warn"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "packed"
incremental = false

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

# CI profile: optimized for minimal disk usage in CI environments
# - Inherits from dev for fast compilation
# - No debug info to minimize artifact size
# - No split-debuginfo to avoid extra files
# - Incremental disabled to reduce cache size
[profile.ci]
inherits = "dev"
debug = false
split-debuginfo = "off"
incremental = false

[workspace.dependencies]
# Consensus
base-protocol = { path = "crates/consensus/protocol" }
base-consensus-rpc = { path = "crates/consensus/rpc" }

# Shared
base-jwt = { path = "crates/shared/jwt" }
base-bundles = { path = "crates/shared/bundles" }
base-cli-utils = { path = "crates/shared/cli-utils" }
base-engine-ext = { path = "crates/shared/engine-ext" }
base-primitives = { path = "crates/shared/primitives" }
base-access-lists = { path = "crates/shared/access-lists" }
base-proofs-extension = { path = "crates/client/proofs" }
base-reth-rpc-types = { path = "crates/shared/reth-rpc-types" }
base-flashblocks-node = { path = "crates/client/flashblocks-node" }
base-txpool-rpc = { path = "crates/shared/txpool-rpc" }

# Client
base-metering = { path = "crates/client/metering" }
base-client-cli = { path = "crates/client/cli" }
base-client-node = { path = "crates/shared/node" }
base-flashblocks = { path = "crates/client/flashblocks" }
base-client-engine = { path = "crates/client/engine" }
base-txpool-tracing = { path = "crates/client/txpool-tracing" }

# Builder
base-builder-core = { path = "crates/builder/core" }
base-builder-metering = { path = "crates/builder/metering" }
base-builder-publish = { path = "crates/builder/publish" }

# Infra
basectl-cli = { path = "crates/infra/basectl" }
based = { path = "crates/infra/based" }
mempool-rebroadcaster = { path = "crates/infra/mempool-rebroadcaster" }

# Tips
tips-core = { path = "crates/infra/core" }
tips-audit-lib = { path = "crates/infra/audit" }
tips-ingress-rpc-lib = { path = "crates/infra/ingress-rpc" }
tips-system-tests = { path = "crates/infra/system-tests" }
account-abstraction-core = { path = "crates/infra/account-abstraction-core" }

# Kona
kona-cli = { git = "https://github.com/ethereum-optimism/optimism", rev = "238012d2d96d5cebbdc390c9199bd63722115a42", default-features = false }
kona-rpc = { git = "https://github.com/ethereum-optimism/optimism", rev = "238012d2d96d5cebbdc390c9199bd63722115a42", default-features = false }
kona-disc = { git = "https://github.com/ethereum-optimism/optimism", rev = "238012d2d96d5cebbdc390c9199bd63722115a42", default-features = false }
kona-peers = { git = "https://github.com/ethereum-optimism/optimism", rev = "238012d2d96d5cebbdc390c9199bd63722115a42", default-features = false }
kona-engine = { git = "https://github.com/ethereum-optimism/optimism", rev = "238012d2d96d5cebbdc390c9199bd63722115a42", default-features = false }
kona-derive = { git = "https://github.com/ethereum-optimism/optimism", rev = "238012d2d96d5cebbdc390c9199bd63722115a42", default-features = false }
kona-gossip = { git = "https://github.com/ethereum-optimism/optimism", rev = "238012d2d96d5cebbdc390c9199bd63722115a42", default-features = false }
kona-genesis = { git = "https://github.com/ethereum-optimism/optimism", rev = "238012d2d96d5cebbdc390c9199bd63722115a42", default-features = false }
kona-sources = { git = "https://github.com/ethereum-optimism/optimism", rev = "238012d2d96d5cebbdc390c9199bd63722115a42", default-features = false }
kona-registry = { git = "https://github.com/ethereum-optimism/optimism", rev = "238012d2d96d5cebbdc390c9199bd63722115a42", default-features = false }
kona-node-service = { git = "https://github.com/ethereum-optimism/optimism", rev = "238012d2d96d5cebbdc390c9199bd63722115a42", default-features = false }
kona-providers-alloy = { git = "https://github.com/ethereum-optimism/optimism", rev = "238012d2d96d5cebbdc390c9199bd63722115a42", default-features = false }

# reth
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-ipc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-db-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-tokio-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-rpc-convert = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-engine-tree = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-payload-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-trie-parallel = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-tracing-otlp = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-optimism-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-optimism-forks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-optimism-txpool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-execution-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-optimism-storage = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-optimism-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-optimism-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }
reth-payload-builder-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.10.2" }

# op-reth
reth-optimism-rpc = { git = "https://github.com/op-rs/op-reth", rev = "8746d94ea4c6d2743ce5fe8e9f7c9301af02cd66" }
reth-optimism-cli = { git = "https://github.com/op-rs/op-reth", rev = "8746d94ea4c6d2743ce5fe8e9f7c9301af02cd66" }
reth-optimism-exex = { git = "https://github.com/op-rs/op-reth", rev = "8746d94ea4c6d2743ce5fe8e9f7c9301af02cd66" }
reth-optimism-node = { git = "https://github.com/op-rs/op-reth", rev = "8746d94ea4c6d2743ce5fe8e9f7c9301af02cd66" }
reth-optimism-trie = { git = "https://github.com/op-rs/op-reth", rev = "8746d94ea4c6d2743ce5fe8e9f7c9301af02cd66" }

# revm
revm = { version = "34.0.0", default-features = false }
revm-state = { version = "9.0.0", default-features = false }
revm-context = { version = "13.0.0", default-features = false }
revm-bytecode = { version = "8.0.0", default-features = false }
revm-database = { version = "10.0.0", default-features = false }
revm-inspector = { version = "15.0.0", default-features = false }
revm-inspectors = { version = "0.34.0", default-features = false }
revm-primitives = { version = "22.0.0", default-features = false }
revm-interpreter = { version = "32.0.0", default-features = false }
revm-context-interface = { version = "14.0.0", default-features = false }
revm-database-interface = { version = "9.0.0", default-features = false }

# alloy
alloy-rlp = "0.3.10"
alloy-trie = "0.9.1"
alloy-eips = "1.4.3"
alloy-serde = "1.4.3"
alloy-signer = "1.4.3"
alloy-chains = "0.2.5"
alloy-pubsub = "1.4.3"
alloy-network = "1.4.3"
alloy-genesis = "1.4.3"
alloy-eip7928 = "0.3.0"
alloy-provider = "1.4.3"
alloy-contract = "1.4.3"
alloy-json-rpc = "1.4.3"
alloy-consensus = "1.4.3"
alloy-transport = "1.4.3"
alloy-rpc-types = "1.4.3"
alloy-hardforks = "0.4.5"
alloy-sol-types = "1.5.0"
alloy-sol-macro = "1.5.0"
alloy-rpc-client = "1.4.3"
alloy-signer-local = "1.4.3"
alloy-node-bindings = "1.4.3"
alloy-rpc-types-eth = "1.4.3"
alloy-transport-http = "1.4.3"
alloy-rpc-types-beacon = "1.4.3"
alloy-rpc-types-engine = "1.4.3"
alloy-network-primitives = "1.4.3"
alloy-evm = { version = "0.26.3", default-features = false }
alloy-primitives = { version = "1.5.0", default-features = false }

# op-alloy
alloy-op-hardforks = "0.4.4"
op-alloy-flz = { version = "0.13.1", default-features = false }
alloy-op-evm = { version = "0.26.3", default-features = false }
op-alloy-network = { version = "0.23.1", default-features = false }
op-alloy-provider = { version = "0.23.1", default-features = false }
op-alloy-rpc-types = { version = "0.23.1", default-features = false }
op-alloy-consensus = { version = "0.23.1", default-features = false }
op-alloy-rpc-jsonrpsee = { version = "0.23.1", default-features = false }
op-alloy-rpc-types-engine = { version = "0.23.1", default-features = false }

# rollup-boost version that matches kona's dependency (used for consensus binary)
rollup-boost = "0.7.13"


# op-revm
op-revm = { version = "15.0.0", default-features = false }

# tokio
tokio = "1.48.0"
tokio-util = "0.7.4"
tokio-stream = "0.1.17"
tokio-tungstenite = "0.28.0"

# async
futures = "0.3.31"
reqwest = "0.13.1"
futures-util = "0.3.31"
async-trait = "0.1.83"

# rpc
jsonrpsee = "0.26.0"
jsonrpsee-core = "0.26.0"
jsonrpsee-types = "0.26.0"

# cli
clap = "4.5.57"
vergen = "9.1.0"
vergen-git2 = "9.1.0"
clap_builder = "4.5.57"

# Tracing
tracing = "0.1.43"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"

# Metrics
metrics-derive = "0.1.0"
metrics = { version = "0.24.3", default-features = false }
prometheus = { version = "0.14.0", default-features = false }
metrics-process = { version = "2.4.3", default-features = false }
metrics-exporter-prometheus = { version = "0.18.1", default-features = false }

# misc
hex = "0.4"
tar = "0.4"
http = "1.0"
sha3 = "0.10"
tower = "0.5"
anyhow = "1"
moka = "0.12"
discv5 = "0.10"
rlimit = "0.10"
url = "2.5.7"
rayon = "1.11"
ctor = "0.4.2"
rand = "0.9.2"
nanoid = "0.4"
lru = "0.16.3"
dashmap = "6.1"
strum = "0.27.2"
ahash = "0.8.6"
k256 = "0.13.4"
uuid = "1.19.0"
warp = "0.3.7"
hyper = "1.7.0"
eyre = "0.6.12"
backon = "1.6.0"
brotli = "8.0.2"
bytes = "1.11.1"
rstest = "0.26.1"
chrono = "0.4.42"
rustls = "0.23.35"
serde = "1.0.228"
thiserror = "2.0"
tempfile = "3.8"
criterion = "0.5"
secp256k1 = "0.30"
libp2p = "0.56.0"
time = "0.3.44"
arc-swap = "1.7.1"
auto_impl = "1.2.0"
flate2 = "1.0.37"
serde_with = "3.8.1"
httpmock = "0.8.2"
itertools = "0.14.0"
dirs-next = "2.0.0"
once_cell = "1.21.3"
hyper-util = "0.1.11"
derive_more = "2.1.0"
lazy_static = "1.4.0"
parking_lot = "0.12.3"
shellexpand = "3.1"
serde_json = "1.0.145"
opentelemetry = "0.31"
ethereum_ssz = "0.9.0"
http-body-util = "0.1.3"
libp2p-identity = "0.2.12"
testcontainers = "0.26.3"
concurrent-queue = "2.5.0"
tikv-jemallocator = "0.6"
ethereum_ssz_derive = "0.9.0"
dirs = "6.0.0"
cadence = "1.7.0"
arboard = "3.6.1"
ratatui = "0.29.0"
crossterm = "0.28.1"
serde_yaml = "0.9.34"
either = { version = "1.15.0", default-features = false }
rdkafka = { version = "0.37.0", default-features = false }
aws-config = { version = "1.1.7", default-features = false }
aws-sdk-s3 = { version = "1.106.0", default-features = false }
aws-credential-types = { version = "1.1.7", default-features = false }
axum = { version = "0.8.3", default-features = false }
dotenvy = { version = "0.15.7", default-features = false }
wiremock = { version = "0.6.2", default-features = false }
testcontainers-modules = { version = "0.14.0", default-features = false }
