[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
homepage = "https://github.com/base/base"
repository = "https://github.com/base/base"
exclude = [".github/"]

[workspace]
resolver = "2"
members = [
    "bin/*",
    "crates/client/*",
    "crates/consensus/*",
    "crates/shared/*",
    "crates/builder/*",
    "crates/infra/*",
    "crates/alloy/*",
    "devnet"
]
default-members = [
    "bin/based",
    "bin/node",
    "bin/basectl",
    "bin/builder",
    "bin/consensus",
    "bin/ingress-rpc",
    "bin/audit-archiver",
    "bin/mempool-rebroadcaster",
]

[workspace.metadata.cargo-udeps.ignore]
normal = ["rustls-platform-verifier"]

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
# Baseline - enable all default clippy lints
all = { level = "warn", priority = -1 }

# === Performance & Cloning ===
missing-const-for-fn = "warn"
redundant-clone = "warn"
clone-on-ref-ptr = "warn"
unnecessary-to-owned = "warn"
cloned-instead-of-copied = "warn"
flat-map-option = "warn"
implicit-clone = "warn"
or-fun-call = "warn"

# === Code Style ===
use-self = "warn"
option-if-let-else = "warn"
uninlined-format-args = "warn"
manual-string-new = "warn"
single-char-pattern = "warn"
redundant-else = "warn"
match-same-arms = "warn"

# === Safety & Documentation ===
undocumented-unsafe-blocks = "warn"
doc-markdown = "warn"

# === Debugging Artifacts ===
dbg-macro = "warn"

# === Code Quality ===
branches-sharing-code = "warn"
derive-partial-eq-without-eq = "warn"
explicit-into-iter-loop = "warn"
explicit-iter-loop = "warn"
iter-with-drain = "warn"
needless-pass-by-ref-mut = "warn"
string-lit-as-bytes = "warn"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "packed"
incremental = false

[profile.release]
opt-level = 3
lto = "thin"
debug = "none"
strip = "symbols"
panic = "unwind"
codegen-units = 16

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[profile.profiling]
inherits = "release"
lto = false
debug = "line-tables-only"
strip = "none"
force-frame-pointers = true

# CI profile: optimized for minimal disk usage in CI environments
# - Inherits from dev for fast compilation
# - No debug info to minimize artifact size
# - No split-debuginfo to avoid extra files
# - Incremental disabled to reduce cache size
[profile.ci]
inherits = "dev"
debug = false
split-debuginfo = "off"
incremental = false

[workspace.dependencies]
# Consensus
base-protocol = { path = "crates/consensus/protocol" }
base-consensus-rpc = { path = "crates/consensus/rpc" }

# Shared
base-jwt = { path = "crates/shared/jwt" }
base-bundles = { path = "crates/shared/bundles" }
base-cli-utils = { path = "crates/shared/cli-utils" }
base-engine-ext = { path = "crates/shared/engine-ext" }
base-primitives = { path = "crates/shared/primitives" }
base-access-lists = { path = "crates/shared/access-lists" }
base-proofs-extension = { path = "crates/client/proofs" }
base-reth-rpc-types = { path = "crates/shared/reth-rpc-types" }
base-flashblocks-node = { path = "crates/client/flashblocks-node" }
base-txpool-rpc = { path = "crates/shared/txpool-rpc" }

# Client
base-metering = { path = "crates/client/metering" }
base-client-cli = { path = "crates/client/cli" }
base-client-node = { path = "crates/shared/node" }
base-flashblocks = { path = "crates/client/flashblocks" }
base-client-engine = { path = "crates/client/engine" }
base-txpool-tracing = { path = "crates/client/txpool-tracing" }

# Builder
base-builder-core = { path = "crates/builder/core" }
base-builder-metering = { path = "crates/builder/metering" }
base-builder-publish = { path = "crates/builder/publish" }

# Infra
based = { path = "crates/infra/based" }
basectl-cli = { path = "crates/infra/basectl" }
audit-archiver-lib = { path = "crates/infra/audit" }
system-tests = { path = "crates/infra/system-tests" }
ingress-rpc-lib = { path = "crates/infra/ingress-rpc" }
websocket-proxy = { path = "crates/infra/websocket-proxy" }
mempool-rebroadcaster = { path = "crates/infra/mempool-rebroadcaster" }

# Kona
kona-cli = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37", default-features = false }
kona-rpc = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37", default-features = false }
kona-disc = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37", default-features = false }
kona-peers = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37", default-features = false }
kona-engine = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37", default-features = false }
kona-derive = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37", default-features = false }
kona-gossip = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37", default-features = false }
kona-genesis = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37", default-features = false }
kona-sources = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37", default-features = false }
kona-registry = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37", default-features = false }
kona-node-service = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37", default-features = false }
kona-providers-alloy = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37", default-features = false }

# reth
reth-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-ipc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-revm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-exex = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-db-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-tokio-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-rpc-convert = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-storage-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-engine-tree = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-chain-state = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-engine-local = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-payload-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-cli-commands = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-testing-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-rpc-eth-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-trie-parallel = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-tracing-otlp = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-rpc-engine-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-rpc-server-types = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-execution-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-engine-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-payload-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }
reth-payload-builder-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.11.0" }

# op-reth
reth-optimism-payload-builder = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37" }
reth-optimism-consensus = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37" }
reth-optimism-chainspec = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37" }
reth-optimism-primitives = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37" }
reth-optimism-storage = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37" }
reth-optimism-txpool = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37" }
reth-optimism-forks = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37" }
reth-optimism-evm = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37" }

reth-optimism-rpc = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37" }
reth-optimism-cli = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37" }
reth-optimism-exex = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37" }
reth-optimism-node = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37" }
reth-optimism-trie = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37" }

# revm
revm = { version = "34.0.0", default-features = false }
revm-state = { version = "9.0.0", default-features = false }
revm-context = { version = "13.0.0", default-features = false }
revm-bytecode = { version = "8.0.0", default-features = false }
revm-database = { version = "10.0.0", default-features = false }
revm-inspector = { version = "15.0.0", default-features = false }
revm-inspectors = { version = "0.34.0", default-features = false }
revm-primitives = { version = "22.0.0", default-features = false }
revm-interpreter = { version = "32.0.0", default-features = false }
revm-context-interface = { version = "14.0.0", default-features = false }
revm-database-interface = { version = "9.0.0", default-features = false }

# alloy
alloy-rlp = "0.3.10"
alloy-trie = "0.9.1"
alloy-eips = "1.5.2"
alloy-serde = "1.5.2"
alloy-signer = "1.5.2"
alloy-chains = "0.2.5"
alloy-pubsub = "1.5.2"
alloy-network = "1.5.2"
alloy-genesis = "1.5.2"
alloy-eip7928 = "0.3.0"
alloy-provider = "1.5.2"
alloy-contract = "1.5.2"
alloy-json-rpc = "1.5.2"
alloy-consensus = "1.5.2"
alloy-transport = "1.5.2"
alloy-rpc-types = "1.5.2"
alloy-hardforks = "0.4.5"
alloy-sol-types = "1.5.0"
alloy-sol-macro = "1.5.0"
alloy-rpc-client = "1.5.2"
alloy-signer-local = "1.5.2"
alloy-node-bindings = "1.5.2"
alloy-rpc-types-eth = "1.5.2"
alloy-transport-http = "1.5.2"
alloy-rpc-types-beacon = "1.5.2"
alloy-rpc-types-engine = "1.5.2"
alloy-network-primitives = "1.5.2"
alloy-evm = { version = "0.27.0", default-features = false }
alloy-primitives = { version = "1.5.0", default-features = false }

# base-alloy (local)
base-alloy-evm = { path = "crates/alloy/evm" }
base-alloy-network = { path = "crates/alloy/network" }
base-alloy-provider = { path = "crates/alloy/provider" }
base-alloy-rpc-types = { path = "crates/alloy/rpc-types" }
base-alloy-consensus = { path = "crates/alloy/consensus" }
base-alloy-hardforks = { path = "crates/alloy/hardforks" }
base-alloy-rpc-jsonrpsee = { path = "crates/alloy/rpc-jsonrpsee" }
base-alloy-rpc-types-engine = { path = "crates/alloy/rpc-types-engine" }

# op-alloy (external)
# TODO: remove these once reth and kona no longer depend on upstream op-alloy
alloy-op-hardforks = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37" }
op-alloy-flz = { version = "0.13.1", default-features = false }
alloy-op-evm = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37", default-features = false }
op-alloy-network = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37", default-features = false }
op-alloy-provider = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37", default-features = false }
op-alloy-rpc-types = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37", default-features = false }
op-alloy-consensus = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37", default-features = false }
op-alloy-rpc-jsonrpsee = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37", default-features = false }
op-alloy-rpc-types-engine = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37", default-features = false }

# rollup-boost version that matches kona's dependency (used for consensus binary)
rollup-boost = "0.7.13"


# op-revm
op-revm = { version = "15.0.0", default-features = false }

# tokio
tokio = "1.48.0"
tokio-util = "0.7.4"
tokio-stream = "0.1.17"
tokio-tungstenite = "0.28.0"

# async
futures = "0.3.31"
reqwest = "0.13.1"
futures-util = "0.3.31"
async-trait = "0.1.83"

# rpc
jsonrpsee = "0.26.0"
jsonrpsee-core = "0.26.0"
jsonrpsee-types = "0.26.0"

# cli
clap = "4.5.57"
vergen = "9.1.0"
vergen-git2 = "9.1.0"
clap_builder = "4.5.57"

# Tracing
tracing = "0.1.43"
tracing-appender = "0.2.4"
tracing-subscriber = "0.3.22"

# Metrics
metrics-derive = "0.1.0"
metrics = { version = "0.24.3", default-features = false }
prometheus = { version = "0.14.0", default-features = false }
metrics-process = { version = "2.4.3", default-features = false }
metrics-exporter-prometheus = { version = "0.18.1", default-features = false }

# misc
hex = "0.4"
tar = "0.4"
http = "1.0"
sha3 = "0.10"
tower = "0.5"
anyhow = "1"
moka = "0.12"
discv5 = "0.10"
rlimit = "0.10"
url = "2.5.7"
rayon = "1.11"
ctor = "0.4.2"
rand = "0.9.2"
nanoid = "0.4"
lru = "0.16.3"
dashmap = "6.1"
strum = "0.27.2"
ahash = "0.8.6"
k256 = "0.13.4"
uuid = "1.19.0"
warp = "0.3.7"
hyper = "1.7.0"
eyre = "0.6.12"
backon = "1.6.0"
brotli = "8.0.2"
bytes = "1.11.1"
rstest = "0.26.1"
chrono = "0.4.42"
rustls = "0.23.35"
serde = "1.0.228"
thiserror = "2.0"
tempfile = "3.8"
criterion = "0.5"
secp256k1 = "0.30"
libp2p = "0.56.0"
time = "0.3.44"
arc-swap = "1.7.1"
auto_impl = "1.2.0"
flate2 = "1.0.37"
serde_with = "3.8.1"
httpmock = "0.8.2"
itertools = "0.14.0"
dirs-next = "2.0.0"
once_cell = "1.21.3"
hyper-util = "0.1.11"
derive_more = "2.1.0"
lazy_static = "1.4.0"
parking_lot = "0.12.3"
shellexpand = "3.1"
serde_json = "1.0.145"
opentelemetry = "0.31"
ethereum_ssz = "0.9.0"
http-body-util = "0.1.3"
libp2p-identity = "0.2.12"
testcontainers = "0.26.3"
concurrent-queue = "2.5.0"
tikv-jemallocator = "0.6"
ethereum_ssz_derive = "0.9.0"
dirs = "6.0.0"
cadence = "1.7.0"
arboard = "3.6.1"
ratatui = "0.30.0"
crossterm = "0.28.1"
serde_yaml = "0.9.34"
either = { version = "1.15.0", default-features = false }
rdkafka = { version = "0.37.0", default-features = false }
aws-config = { version = "1.1.7", default-features = false }
aws-sdk-s3 = { version = "1.106.0", default-features = false }
aws-credential-types = { version = "1.1.7", default-features = false }
axum = { version = "0.8.3", default-features = false }
dotenvy = { version = "0.15.7", default-features = false }
libc = "0.2"
arbitrary = { version = "1", default-features = false }
indicatif = "0.17"
rand_chacha = "0.9"
serial_test = "3"
mockall = "0.13"
wiremock = { version = "0.6.2", default-features = false }
testcontainers-modules = { version = "0.14.0", default-features = false }
sha2 = "0.10"
snap = "1"
bincode = "2"
arbtest = "0.3"
backoff = "0.4.0"
hostname = "0.4.0"
redis = "0.30.0"
similar-asserts = "1"

# copied from ethereum-optimism/optimism
[patch.crates-io]
# Duplicated by: reth-payload-primitives, reth-engine-local (reth git), rollup-boost,
# rollup-boost-types (crates.io)
op-alloy-rpc-types-engine = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37" }
# Duplicated by: reth-codecs, reth-db-api, reth-primitives-traits, reth-rpc-convert (reth git)
op-alloy-consensus = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37" }
# Duplicated by: reth-rpc-convert (reth git)
op-alloy-network = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37" }
# Duplicated by: reth-rpc-convert (reth git)
op-alloy-rpc-types = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37" }
# Duplicated by: alloy-evm (crates.io)
op-alloy = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37" }
# Duplicated by: alloy-evm (crates.io)
alloy-op-hardforks = { git = "https://github.com/ethereum-optimism/optimism", rev = "a46ffeef01ec07de31594c07859b64bbbb9e5d37" }
